syntax = "proto3";

package ru.etu.grpc.segmentation;

option java_package = "ru.etu.grpc.segmentation";
option java_multiple_files = true;
import "google/protobuf/struct.proto";

service SegmentationService {
  rpc SegmentCt (CtRequest) returns (CtResponse) {}
  rpc SegmentJaw (JawRequest) returns (JawResponse) {}
  rpc Align (AlignmentRequest) returns (AlignmentResponse) {}
}

message CtRequest {
  string ctOriginal = 1;
}

message CtResponse {
  string ctMask = 1;
}

message JawRequest {
  string jawUpper = 1;
  string jawLower = 2;
}

message JawResponse {
  repeated google.protobuf.Struct jaws_segmented = 1;
}

message AnatomicalStructure {
  string stl = 1;
  google.protobuf.Struct init_matrix = 2;
}

message AlignmentRequest {
  string ctMask = 1;
  string jaw_upper_stl = 2;
  string jaw_lower_stl = 3;
  repeated google.protobuf.Struct jaws_segmented = 4;
}

message AlignmentResponse {
  repeated AnatomicalStructure initStructures = 1;
}